--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,6 +1,6 @@
 
 $theme-colors: (
-  "primary":    #03eac1,
+  "primary":    #61DAFB,
   "secondary":  #6c757d,
   "success":    #00B74A,
   "info":       #39C0ED,
